--- a/src/styles.css
+++ b/src/styles.css
@@ -1,42 +1,85 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #6466ff;
-  display: flex;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #12dde4;
+  color: #212121;
+  line-height: 1.5;
+}
+
+img {
+  width: 100%;
+  display: block;
+  max-width: 100%;
+  /* height: auto; */
+}
+
+a {
+  text-decoration: none;
+  color: #0d1381;
 }
 
 .search-form {
-  padding: 10px;
-  margin-left: auto;
-  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+  padding: 12px;
+  background-color: #0a4971;
+  border: 3px solid whitesmoke;
+  border-radius: 4px;
+  justify-content: center;
 }
 
 input {
-  width: 350px;
-  height: 40px;
-  border-radius: 7px;
-  border-color: #64ceff;
-  padding-left: 7px;
+  margin-right: 20px;
+  border: 2px solid rgb(59, 183, 245);
+  border-radius: 10px;
+  padding: 10px;
+  width: 400px;
+  background-color: bisque;
+  color: blue;
+  outline: none;
+  font-size: 18px;
+  text-align: center;
 }
 
-.container {
-  padding: 20px;
-  width: 1400px;
-  margin-left: auto;
-  margin-right: auto;
+.submit {
+  background-color: bisque;
+  border-radius: 50%;
+  outline: none;
+  border: 3px solid rgb(59, 183, 245);
+  margin-right: 20px;
+  cursor: pointer;
 }
 
+.submit:hover {
+  background-color: #8083b0;
+}
 .gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
-  border: #64ceff, 2px, solid;
+  /* border: 5px solid white; */
+  margin-top: 15px;
 }
 
-img {
-  display: block;
-  width: 380px;
-  height: 280px;
+.gallery-item {
+  margin-top: 10px;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
 }
+
+/* .gallery__link {
+  border: 2px solid rgb(13, 34, 222);
+  border-radius: 10px;
+} */
 
 .info {
   width: 95%;
@@ -45,16 +88,32 @@ img {
   justify-content: center;
 }
 
-.photo-card {
-  border: #6466ff 1px solid;
-  width: 381px;
+.info-item {
+  text-align: center;
+  flex-basis: calc(25% - 10px);
+}
+
+.info-item b {
+  margin-right: 10px;
 }
 
 .load-more {
+  width: 100px;
+  height: 50px;
+  color: white;
+  background-color: #0d1381;
+  border-radius: 10px;
+  border: 3px solid rgb(55, 190, 25);
+  margin: 20px auto 20px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 60px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.load-more:hover,
+.load-more:focus {
+  color: #0d1381;
+  background-color: whitesmoke;
 }
 
 .is-hidden {
