--- a/src/styles.css
+++ b/src/styles.css
@@ -12,17 +12,52 @@ body {
   line-height: 1.5;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 img {
   width: 100%;
   display: block;
   max-width: 100%;
-  /* height: auto; */
+  height: auto;
 }
 
 a {
   text-decoration: none;
   color: #0d1381;
 }
+
+.container {
+  width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 0;
+}
+/* padding-left: 15px;
+  padding-right: 15px; */
+
+.gallery-card {
+  background-color: #fff;
+  flex-basis: calc(25% - 12.5px);
+
+  text-align: center;
+  /* flex-basis: calc((100% - 3 * (10px)) / 4); */
+}
+
+/* .gallery-item__img {
+  width: 100%;
+  max-width: unset;
+  object-fit: cover;
+  display: block;
+} */
 
 .search-form {
   display: flex;
@@ -63,17 +98,21 @@ input {
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px;
+  /* justify-content: center; */
+  gap: 30px;
   /* border: 5px solid white; */
-  margin-top: 15px;
+  /* margin-top: 15px; */
 }
 
 .gallery-item {
-  margin-top: 10px;
   height: 100%;
   flex-direction: column;
-  display: flex;
+  /* display: flex; */
+  width: 100%;
+
+  max-width: unset;
+  object-fit: cover;
+  display: block;
 }
 
 /* .gallery__link {
@@ -82,15 +121,25 @@ input {
 } */
 
 .info {
-  width: 95%;
+  /* width: 95%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
+   */
+  width: 100%;
+  gap: 10px;
+  padding: 10px 14px;
+  display: flex;
 }
 
 .info-item {
-  text-align: center;
-  flex-basis: calc(25% - 10px);
+  color: #000;
+  flex-direction: column;
+  flex-basis: calc(25% - 7.5px);
+  align-items: center;
+  margin-left: 0;
+  margin-right: 0;
+  display: flex;
 }
 
 .info-item b {
