--- a/src/styles.css
+++ b/src/styles.css
@@ -12,15 +12,8 @@ body {
   line-height: 1.5;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 img {
@@ -35,28 +28,21 @@ a {
   color: #0d1381;
 }
 
-.container {
+/* .container {
   width: 1400px;
   margin-left: auto;
   margin-right: auto;
   padding: 40px 0;
-}
+  border: 2px solid red;
+} */
 /* padding-left: 15px;
   padding-right: 15px; */
 
-.gallery-card {
+/* .gallery-card {
   background-color: #fff;
   flex-basis: calc(25% - 12.5px);
 
   text-align: center;
-  /* flex-basis: calc((100% - 3 * (10px)) / 4); */
-}
-
-/* .gallery-item__img {
-  width: 100%;
-  max-width: unset;
-  object-fit: cover;
-  display: block;
 } */
 
 .search-form {
@@ -95,37 +81,33 @@ input {
 .submit:hover {
   background-color: #8083b0;
 }
-.gallery {
-  display: flex;
+/* .gallery {
+  /* display: flex;
   flex-wrap: wrap;
-  /* justify-content: center; */
-  gap: 30px;
-  /* border: 5px solid white; */
-  /* margin-top: 15px; */
-}
+  gap: 30px; */
 
-.gallery-item {
+/* flex-wrap: wrap;
+  justify-content: center;
+  align-items: baseline;
+  gap: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  list-style: none;
+  display: flex;
+} */
+
+/* .gallery-item {
   height: 100%;
   flex-direction: column;
   /* display: flex; */
-  width: 100%;
+/* width: 100%;
 
   max-width: unset;
   object-fit: cover;
   display: block;
-}
-
-/* .gallery__link {
-  border: 2px solid rgb(13, 34, 222);
-  border-radius: 10px;
 } */
 
-.info {
-  /* width: 95%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-   */
+/* .info {
   width: 100%;
   gap: 10px;
   padding: 10px 14px;
@@ -144,7 +126,7 @@ input {
 
 .info-item b {
   margin-right: 10px;
-}
+} */
 
 .load-more {
   width: 100px;
@@ -167,4 +149,55 @@ input {
 
 .is-hidden {
   display: none;
+}
+
+.gallery {
+  padding-top: 50px;
+  /* padding-bottom: 50px; */
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.photo-card {
+  flex-basis: calc((100% - 30px) / 5);
+  cursor: pointer;
+
+  transition: scale 200ms linear;
+}
+
+.photo-card img {
+  border-radius: 15px 15px 0px 0px;
+}
+
+.photo-card:hover {
+  scale: 1.03;
+}
+
+.info {
+  display: flex;
+  padding: 5px;
+  gap: 10px;
+  text-align: center;
+  background-color: rgba(65, 105, 225, 0.212);
+  border: 1px solid white;
+  border-top: none;
+  border-radius: 0px 0px 5px 5px;
+  justify-content: center;
+}
+
+.info-item {
+  font-size: 14px;
+}
+
+.info-item:not(:last-child) {
+  border-right: 1px solid rgb(213, 236, 226);
+  padding-right: 5px;
+}
+
+.info-item b {
+  color: rgb(24, 99, 26);
 }
